--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,6 +12,10 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/def075f8a4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
